src/emit/emitter/snapshots/mu__emit__emitter__tests__func-6.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
fn test(a, *v, b=10, **kw):
  print a, v, b, kw

test(1, 2)
test(1, 2, b=3, c=4)


# Func:
function "test":
  frame_size: 7
  length: 48
  const (length=1):
    0: "b"
  code:
     0 | is_kw_param_not_set [0]
     2 | jump_if_false offset=19
     4 | nop 
     5 | nop 
     6 | nop 
     7 | nop 
     8 | push_small_int value=10
    13 | store_reg r5
    15 | jump offset=9
    17 | nop 
    18 | nop 
    19 | nop 
    20 | nop 
    21 | load_kw_param [0], r5
    24 | create_empty_list 
    25 | store_reg r6
    27 | load_reg r4
    29 | push_to_list r6
    31 | load_reg r1
    33 | push_to_list r6
    35 | load_reg r5
    37 | push_to_list r6
    39 | load_reg r2
    41 | push_to_list r6
    43 | print_list r6
    45 | push_none 
    46 | ret 
    47 | suspend 

function "code":
  frame_size: 7
  length: 63
  const (length=4):
    0: <func "test">
    1: "test"
    2: "b"
    3: "c"
  code:
     0 | load_const [0]
     2 | store_global [1]
     4 | push_small_int value=1
     9 | store_reg r4
    11 | push_small_int value=2
    16 | store_reg r5
    18 | load_global [1]
    20 | call r4, args=2
    23 | push_small_int value=1
    28 | store_reg r5
    30 | push_small_int value=2
    35 | store_reg r6
    37 | create_empty_dict 
    38 | store_reg r4
    40 | push_small_int value=3
    45 | insert_to_dict_named [2], r4
    48 | push_small_int value=4
    53 | insert_to_dict_named [3], r4
    56 | load_global [1]
    58 | call_kw r4, args=2
    61 | ret 
    62 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r3 │             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r4 │                 ●━━━━━━━━━━━━━━━━━━━●
r5 │                     ●━━━━━━━━━━━●
r6 │                                         ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r7 │                                             ●━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r8 │                                                 ●━━━━━━━━━━━━━━━━━━━━━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  09  10  11  12  13  14  15  16  17  18  19  20  21  22  23  24  25  
