src/emit/emitter/snapshots/mu__emit__emitter__tests__logical_expr.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
fn f0(a, b):
  a && b
  a || b
  a ?? b


fn f1_a(a, b, c, d):
  (a && b) || (c && d)
fn f1_b(a, b, c, d):
   a && b  ||  c && d

fn f2_a(a, b, c, d):
  (a || (b && c)) || d
fn f2_b(a, b, c, d):
  a ||  b && c  || d

fn f3(a, b, c, d):
  a ?? b ?? c


# Func:
function "f0":
  frame_size: 7
  length: 50
  const: <empty>
  code:
     0 | load_reg r4
     2 | jump_if_false offset=8
     4 | nop 
     5 | nop 
     6 | nop 
     7 | nop 
     8 | load_reg r5
    10 | load_reg r4
    12 | jump_if_false offset=12
    14 | nop 
    15 | nop 
    16 | nop 
    17 | nop 
    18 | jump offset=8
    20 | nop 
    21 | nop 
    22 | nop 
    23 | nop 
    24 | load_reg r5
    26 | load_reg r4
    28 | store_reg r6
    30 | is_none 
    31 | jump_if_false offset=14
    33 | nop 
    34 | nop 
    35 | nop 
    36 | nop 
    37 | load_reg r5
    39 | jump offset=8
    41 | nop 
    42 | nop 
    43 | nop 
    44 | nop 
    45 | load_reg r6
    47 | push_none 
    48 | ret 
    49 | suspend 

function "f1_a":
  frame_size: 8
  length: 35
  const: <empty>
  code:
     0 | load_reg r4
     2 | jump_if_false offset=8
     4 | nop 
     5 | nop 
     6 | nop 
     7 | nop 
     8 | load_reg r5
    10 | jump_if_false offset=12
    12 | nop 
    13 | nop 
    14 | nop 
    15 | nop 
    16 | jump offset=16
    18 | nop 
    19 | nop 
    20 | nop 
    21 | nop 
    22 | load_reg r6
    24 | jump_if_false offset=8
    26 | nop 
    27 | nop 
    28 | nop 
    29 | nop 
    30 | load_reg r7
    32 | push_none 
    33 | ret 
    34 | suspend 

function "f1_b":
  frame_size: 8
  length: 35
  const: <empty>
  code:
     0 | load_reg r4
     2 | jump_if_false offset=8
     4 | nop 
     5 | nop 
     6 | nop 
     7 | nop 
     8 | load_reg r5
    10 | jump_if_false offset=12
    12 | nop 
    13 | nop 
    14 | nop 
    15 | nop 
    16 | jump offset=16
    18 | nop 
    19 | nop 
    20 | nop 
    21 | nop 
    22 | load_reg r6
    24 | jump_if_false offset=8
    26 | nop 
    27 | nop 
    28 | nop 
    29 | nop 
    30 | load_reg r7
    32 | push_none 
    33 | ret 
    34 | suspend 

function "f2_a":
  frame_size: 8
  length: 41
  const: <empty>
  code:
     0 | load_reg r4
     2 | jump_if_false offset=12
     4 | nop 
     5 | nop 
     6 | nop 
     7 | nop 
     8 | jump offset=16
    10 | nop 
    11 | nop 
    12 | nop 
    13 | nop 
    14 | load_reg r5
    16 | jump_if_false offset=8
    18 | nop 
    19 | nop 
    20 | nop 
    21 | nop 
    22 | load_reg r6
    24 | jump_if_false offset=12
    26 | nop 
    27 | nop 
    28 | nop 
    29 | nop 
    30 | jump offset=8
    32 | nop 
    33 | nop 
    34 | nop 
    35 | nop 
    36 | load_reg r7
    38 | push_none 
    39 | ret 
    40 | suspend 

function "f2_b":
  frame_size: 8
  length: 41
  const: <empty>
  code:
     0 | load_reg r4
     2 | jump_if_false offset=12
     4 | nop 
     5 | nop 
     6 | nop 
     7 | nop 
     8 | jump offset=16
    10 | nop 
    11 | nop 
    12 | nop 
    13 | nop 
    14 | load_reg r5
    16 | jump_if_false offset=8
    18 | nop 
    19 | nop 
    20 | nop 
    21 | nop 
    22 | load_reg r6
    24 | jump_if_false offset=12
    26 | nop 
    27 | nop 
    28 | nop 
    29 | nop 
    30 | jump offset=8
    32 | nop 
    33 | nop 
    34 | nop 
    35 | nop 
    36 | load_reg r7
    38 | push_none 
    39 | ret 
    40 | suspend 

function "f3":
  frame_size: 9
  length: 43
  const: <empty>
  code:
     0 | load_reg r4
     2 | store_reg r8
     4 | is_none 
     5 | jump_if_false offset=14
     7 | nop 
     8 | nop 
     9 | nop 
    10 | nop 
    11 | load_reg r5
    13 | jump offset=8
    15 | nop 
    16 | nop 
    17 | nop 
    18 | nop 
    19 | load_reg r8
    21 | store_reg r7
    23 | is_none 
    24 | jump_if_false offset=14
    26 | nop 
    27 | nop 
    28 | nop 
    29 | nop 
    30 | load_reg r6
    32 | jump offset=8
    34 | nop 
    35 | nop 
    36 | nop 
    37 | nop 
    38 | load_reg r7
    40 | push_none 
    41 | ret 
    42 | suspend 

function "code":
  frame_size: 4
  length: 26
  const (length=12):
    0: <func "f0">
    1: "f0"
    2: <func "f1_a">
    3: "f1_a"
    4: <func "f1_b">
    5: "f1_b"
    6: <func "f2_a">
    7: "f2_a"
    8: <func "f2_b">
    9: "f2_b"
    10: <func "f3">
    11: "f3"
  code:
     0 | load_const [0]
     2 | store_global [1]
     4 | load_const [2]
     6 | store_global [3]
     8 | load_const [4]
    10 | store_global [5]
    12 | load_const [6]
    14 | store_global [7]
    16 | load_const [8]
    18 | store_global [9]
    20 | load_const [10]
    22 | store_global [11]
    24 | ret 
    25 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
