src/emit/emitter/snapshots/mu__emit__emitter__tests__loop_stmt-11.snap
---
source: src/emit/emitter/tests.rs
expression: snapshot
---
# Input:
loop:
  while true:
    break
  break


# Func:
function "code":
  frame_size: 4
  length: 33
  const: <empty>
  code:
     0 | push_true 
     1 | jump_if_false offset=18
     3 | nop 
     4 | nop 
     5 | nop 
     6 | nop 
     7 | jump offset=12
     9 | nop 
    10 | nop 
    11 | nop 
    12 | nop 
    13 | jump_back offset=13
    15 | nop 
    16 | nop 
    17 | nop 
    18 | nop 
    19 | jump offset=12
    21 | nop 
    22 | nop 
    23 | nop 
    24 | nop 
    25 | jump_back offset=25
    27 | nop 
    28 | nop 
    29 | nop 
    30 | nop 
    31 | ret 
    32 | suspend 


# Regalloc:
r0 │ ●━━━━━━━━━━━━━━━━━━━━━━━━━━━●
r1 │     ●━━━━━━━━━━━━━━━━━━━●
r2 │         ●━━━━━━━━━━━●
r3 │             ●━━━●
   ┕━━━━━━━━━━━━━━━━━━━━━━━━━━━
     00  01  02  03  04  05  06  07  08  
